--- a/src/ui/src/index.css
+++ b/src/ui/src/index.css
@@ -2,11 +2,13 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 /* To override the markdown editor background color */
-.w-md-editor .w-md-editor-pr {
+.w-md-editor {
   background-color: white !important;
+  color: black !important;
 }
 .dark .w-md-editor {
   background-color: var(--color-gray-800) !important;
+  color: var(--color-gray-400) !important;
 }
 
 .wmde-markdown {
